tests/NormalTests/paczka1/small_fuzzy/23726789.err
Error in line 1: S541 A64 74,7
Error in line 7: 83jql9Hj 64 84,5
